# scratch

./: .clangd  .gitignore  CMakeLists.txt  FreeRTOS  STM32Cube_FW_L4_V1.18.1  STM32L4A6ZGTx_FLASH.ld
cmake/: gcc-arm-none-eabi.cmake
cmake/freertos/: CMakeLists.txt
cmake/stm32/: CMakeLists.txt
doc/: req.tex
doc/mcp9808/: notes.txt
inc/: FreeRTOSConfig.h  com.h  gpio.h  heartbeat.h  i2c.hpp  lptim.h  main.h  mcp9808.hpp  pins.h  ring.h  rng.h  rtos.h  rtosInit.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usart.h  vcp.h
src/: main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  syscalls.cpp  sysmem.cpp  system_stm32l4xx.c
src/drivers/: aes.c  com.cpp  gpio.c  hash.c  i2c.c  iwdg.c  lptim.c  mcp9808.cpp  quadspi.c  rng.c  spi.c  tim.c  usart.c
src/tasks/: heartbeat.cpp  rtosInit.cpp  vcp.cpp
